# sophon-demo

./: CONTRIBUTING_CN.md  CONTRIBUTING_EN.md  LICENSE  README.md  README_EN.md
application/Grounded-sam/: README.md  requirements.txt
application/VLPR/: README.md
application/VLPR/cpp/vlpr_bmcv/: CMakeLists.txt  adapt.hpp  main.cpp  vlpr_bmcv.cpp  vlpr_bmcv.hpp
application/VLPR/cpp/vlpr_bmcv/configs/: config_se5.json  config_se7.json  config_se9-16.json  config_se9-8.json
application/VLPR/cpp/vlpr_bmcv/lprnet_multi/: datapipe.hpp  lprnet_bmcv.cpp  lprnet_bmcv.hpp
application/VLPR/cpp/vlpr_bmcv/yolov5_multi/: yolov5.cpp  yolov5.hpp
application/YOLOv5_fuse_multi_QT/: README.md
application/YOLOv5_fuse_multi_QT/cpp/yolov5_bmcv/: CMakeLists.txt  adapt.hpp  config_se9-8.json  draw.hpp  main.cpp  yolov5.cpp  yolov5.hpp
application/YOLOv5_fuse_multi_QT/cpp/yolov5_bmcv/qtgui/: BMLabel.cpp  BMLabel.h  VideoConsole.h
application/YOLOv5_multi/: README.md
application/YOLOv5_multi_QT/: README.md
application/cv-demo/: README.md
application/cv-demo/cpp/: CMakeLists.txt  README.md  blend.cc  blend.h  common_defs.h  cv_demo.html  cvdemo.cpp  cvdemo.hpp  decoder.cc  decoder.h  dwa.cpp  dwa.h  ff_decode.cc  ff_decode.h  frame.h  json.hpp  main.cpp  wss_boost.cc  wss_boost.h
application/cv-demo/cpp/config-04a10/: blend.json  camera_cv_demo.json  dwa_L.json  dwa_R.json
application/cv-demo/cpp/config-04e10/: blend.json  dwa_L.json  dwa_R.json
cmake/: common.cmake
docs/: Calibration_Guide.md  Calibration_Guide_EN.md  Check_Statis.md  Check_Statis_EN.md  Environment_Install_Guide.md  Environment_Install_Guide_EN.md  FAQ.md  FAQ_EN.md  FP32BModel_Precise_Alignment.md  FP32BModel_Precise_Alignment_EN.md  torch.jit.trace_Guide.md  torch.jit.trace_Guide_EN.md
include/: bm_wrapper.hpp  bmnn_utils.h  ff_decode.hpp  utils.hpp
sample/BERT/: README.md  README_EN.md
sample/BERT/cpp/bert_sail/: CMakeLists.txt  bert_sail.cpp  bert_sail.hpp  main.cpp
sample/BERT/cpp/bert_sail/libtorch_tokenizer/src/: tokenizer.cpp  tokenizer.h
sample/BERT/cpp/bert_sail/libtorch_tokenizer/src/unilib/: unicode.cpp  unicode.h  uninorms.cpp  uninorms.h
sample/BLIP/: README.md
sample/Baichuan2/: .gitignore  README.md
sample/ByteTrack/: README.md
sample/ByteTrack/cpp/bytetrack_bmcv/: CMakeLists.txt  bytetrack.cpp  bytetrack.h  draw_utils.hpp  main.cpp
sample/ByteTrack/cpp/bytetrack_opencv/: CMakeLists.txt  bytetrack.cpp  bytetrack.h  draw_utils.hpp  main.cpp
sample/C3D/: README.md
sample/CLIP/: README.md
sample/CenterNet/: README.md
sample/ChatGLM2/: README.md
sample/ChatGLM2/cpp/: CMakeLists.txt  README.md  chatglm2.hpp
sample/ChatGLM3/: README.md
sample/ChatGLM4/: README.md
sample/DeepSORT/: README.md
sample/DirectMHP/: README.md
sample/GroundingDINO/: README.md
sample/HRNet_pose/: README.md
sample/HRNet_pose/cpp/hrnet_pose_bmcv/: CMakeLists.txt  hrnet_pose.cpp  hrnet_pose.hpp  main.cpp
sample/InternVL2/: README.md  requirements.txt
sample/LPRNet/: README.md
sample/LPRNet/cpp/lprnet_bmcv/: CMakeLists.txt  lprnet.cpp  lprnet.hpp  main.cpp
sample/LPRNet/cpp/lprnet_opencv/: CMakeLists.txt  lprnet.cpp  lprnet.hpp  main.cpp
sample/Llama2/: README.md
sample/Llama2/cpp/: CMakeLists.txt  README.md  demo.cpp
sample/MiniCPM/: README.md
sample/MiniCPM/cpp/: CMakeLists.txt  README.md  demo.cpp
sample/MiniCPM/cpp/include_bm1688/: bmdef.h  bmlib_runtime.h
sample/MiniCPM/cpp/include_cv186x/: bmlib_runtime.h  bmruntime_interface.h
sample/OpenPose/: README.md
sample/OpenPose/cpp/openpose_bmcv/: CMakeLists.txt  main.cpp  openpose.cpp  openpose.hpp  pose_postprocess.cpp  pose_postprocess.hpp
sample/P2PNet/: README.md
sample/PP-OCR/: README.md
sample/Qwen/: README.md
sample/Qwen-VL-Chat/: README.md  requirements.txt
sample/Qwen1_5/: README.md
sample/Real-ESRGAN/: README.md
sample/ResNet/: README.md
sample/ResNet/cpp/resnet_opencv/: CMakeLists.txt  main.cpp  resnet.cpp  resnet.hpp
sample/RetinaFace/: LICENSE  README.md
sample/SAM/: README.md
sample/SAM2/: README.md
sample/SCRFD/: README.md
sample/SSD/: README.md
sample/Seamless/: README.md
sample/StableDiffusionV1_5/: README.md  requirements.txt
sample/StableDiffusionXL/: README.md  requirements.txt
sample/SuperGlue/: README.md
sample/SuperGlue/cpp/superglue_bmcv/: CMakeLists.txt  match_pairs.cpp  superglue.cpp  superglue.hpp  superpoint.cpp  superpoint.hpp  utils.hpp
sample/VITS_CHINESE/: README.md
sample/WeNet/: README.md
sample/WeNet/cpp/: CMakeLists.txt  README.md  main.cpp
sample/WeNet/cpp/include/: processor.h  util.h  wenet.h  wrapper.h
sample/WeNet/cpp/src/: processor.cpp  util.cpp  wenet.cpp  wrapper.cpp
sample/Whisper/: README.md
sample/YOLOX/: README.md  README_EN.md
sample/YOLOv10/: README.md
sample/YOLOv11_det/: README.md
sample/YOLOv34/: README.md
sample/YOLOv5/: README.md  README_EN.md
sample/YOLOv5_opt/cpp/yolov5_bmcv/: CMakeLists.txt  main.cpp  yolov5.cpp  yolov5.hpp
sample/chatglm2/python/: CMakeLists.txt  README.md  chatglm2.py  pybind.cpp
sample/ppYoloe/cpp/ppyoloe_sail/: CMakeLists.txt  main.cpp  ppyoloe.cpp  ppyoloe.hpp
sample/segformer/cpp/segformer_sail/: CMakeLists.txt  main.cpp  segformer.cpp  segformer.hpp
scripts/: auto_test_regression.sh  demo_jenkins_review.sh  release.sh
simple/CenterNet/cpp/centernet_bmcv/: CMakeLists.txt  main.cpp  processor.cpp  processor.h
simple/RetinaFace/cpp/retinaface_bmcv/: CMakeLists.txt  bmodel_base.cpp  bmodel_base.hpp  face_detection.cpp  face_detection.hpp  main.cpp  retinaface_post.cpp  retinaface_post.hpp
simple/SSD/: README.md
simple/YOLOX/cpp/: CMakeLists.txt  Readme.md  yolox.cpp  yolox.h  yolox_bmcv.cpp
simple/YOLOv5/cpp/yolov5_bmcv/: CMakeLists.txt  README.md  bmnn_utils.h  main.cpp  utils.hpp  yolov5.cpp  yolov5.hpp
src/: ff_decode.cpp
tutorial/: README.md
tutorial/bm1688_2core2task_yolov5/cpp/yolov5_bmcv/: CMakeLists.txt  bm_wrapper.hpp  main.cpp  yolov5.cpp  yolov5.hpp
tutorial/crop_and_resize_padding/cpp/crop_and_resize_padding_sail/: CMakeLists.txt  main.cpp
(+1425 files in other folders)
