cmake_minimum_required(VERSION 3.10)
project(yolov5)
function(check_and_replace_path ARG_NAME) 
    if(IS_ABSOLUTE ${${ARG_NAME}})
        return()
    endif()
    set(PATH_TO_CHECK ${CMAKE_CURRENT_BINARY_DIR}/${${ARG_NAME}})
    if(EXISTS ${PATH_TO_CHECK})
        message("Path ${PATH_TO_CHECK} exists")
        get_filename_component(ABSOLUTE_PATH ${PATH_TO_CHECK} ABSOLUTE)
        if(EXISTS ${ABSOLUTE_PATH})
            set(${ARG_NAME} ${ABSOLUTE_PATH} PARENT_SCOPE)
        else()
            message(FATAL_ERROR "Invalid path!")
        endif()
    else()
        message(FATAL_ERROR "Path ${PATH_TO_CHECK} does not exist")
    endif()
endfunction()
set(CMAKE_CXX_STANDARD 17)


# set(CMAKE_CXX_FLAGS "-O3")
set(CMAKE_BUILD_TYPE "Debug")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
message("cur dir: ${PROJECT_SOURCE_DIR}")

if (NOT DEFINED TARGET_ARCH)
    set(TARGET_ARCH soc)
endif()

if (${TARGET_ARCH} STREQUAL "pcie")
    message(FATAL_ERROR "it is not support for pcie mode.")
elseif (${TARGET_ARCH} STREQUAL "soc")
    message( "${TARGET_ARCH} mode, starting......")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--allow-shlib-undefined")
    set(CMAKE_AUTOMOC ON)
    set(CMAKE_AUTOUIC ON)
    set(CMAKE_AUTORCC ON)
    set(CMAKE_PREFIX_PATH $ENV{QT_PATH})
    check_and_replace_path(SDK)
    check_and_replace_path(QT_PATH)
    set(CMAKE_C_COMPILER aarch64-linux-gnu-gcc)
    set(CMAKE_ASM_COMPILER aarch64-linux-gnu-gcc)
    set(CMAKE_CXX_COMPILER aarch64-linux-gnu-g++)
    set(BM_LIBS bmlib bmrt bmcv yuv)
    set(OPENCV_LIBS opencv_imgproc opencv_core opencv_highgui opencv_imgcodecs opencv_videoio)
    include_directories("${SDK}/include/")
    include_directories("${SDK}/include/opencv4")
    include_directories("./qtgui")
    link_directories("${QT_PATH}/lib/")
    link_directories("${SDK}/lib/")

    message("SDK: " ${SDK})
    set(Qt5Widgets_DIR ${QT_PATH}/lib/cmake/Qt5Widgets)
    find_package(Qt5Widgets)

    aux_source_directory(. SRC_FILES)
    aux_source_directory(./qtgui/ SRC_FILES)

    add_executable(yolov5_bmcv.soc ${SRC_FILES})
    target_link_libraries(yolov5_bmcv.soc ${BM_LIBS} ${OPENCV_LIBS} -lpthread -lavcodec -lavformat -lavutil Qt5::Widgets Qt5::Core Qt5::Gui)
else ()
    message( FATAL_ERROR  "not support mode, eg: soc, cur: ${TARGET_ARCH}")
endif ()
